tests/snapshots/archivos_45x20.snap
---
source: tests/redimensionado/arnes.rs
---
┌───────────────────────────────────────────┐
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│        ✕ ventana demasiado pequeña        │
│           45×20 · mínimo 50×14            │
│         (Archivos necesita 50×14)         │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
└───────────────────────────────────────────┘
