tests/snapshots/archivos_80x24.snap
---
source: tests/redimensionado/arnes.rs
---
┌ MAGI · ARCHIVOS ───────────────────────────── local ⇄ hetzner-01 ─ [local] ⇥ ┐
│ [tmp]/hogar                                                        │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▸  ..                                                                        │
│    app                — 2025                                                 │
│    static             — 2025                                                 │
│    config.yaml     2 kB 2025   ≠                                             │
│    main.py        14 kB 2025   ≠                                             │
│    notas.md       512 B 2025   ✕                                             │
│    README.md       3 kB 2025                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ 7 elementos · 20 kB                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 ⇥ remoto  ↵ abrir  c copiar  m mover  x borrar  E editar  S sincronizar  ? más
