tests/snapshots/archivos_cola_200x60.snap
---
source: tests/redimensionado/arnes.rs
---
┌ [tmp]/hogar ───────────────────────────────────────────────────────────────────────────┐┌ /var/www/cooperapp ──────────────────────────────────────────────────────────────────────────────┐
│▸  ..                                                                                             ││   ..                                                                                             │
│   app                — 2025                                                                      ││   app                     — 2025                                                                 │
│   static             — 2025                                                                      ││   static                  — 2025                                                                 │
│   config.yaml     2 kB 2025   ≠                                                                  ││   backup.tar.gz      1.1 MB 2025   ✕                                                             │
│   main.py        14 kB 2025   ≠                                                                  ││   config.yaml          1 kB 2025   ≠                                                             │
│   notas.md       512 B 2025   ✕                                                                  ││   main.py             14 kB 2025   ≠                                                             │
│   README.md       3 kB 2025                                                                      ││   README.md            3 kB 2025                                                                 │
│                                                                                                  ││   requirements.txt    300 B 2025   ✕                                                             │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└ 7 elementos · 20 kB ─────────────────────────────────────────────────────────────────────────────┘└ 8 elementos · 1.1 MB ────────────────────────────────────────────────────────────────────────────┘
 ↑ main.py → hetzner-01:main.py ████████████████░░░░  78 % · 1.1 MB de 1.4 MB
  en cola 2 · 3.4 MB
  t transferencias: x cancelar · C limpiar
 ⇥ panel  ↵ abrir  c copiar  m mover  x borrar  r renombrar  d dir  . ocultos  / filtrar  g ruta  h host  t cola  q volver  ? ayuda
